styles/_subscriptions.scss
@import "../styles//variables";

.subscriptions-list {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  overflow: scroll;
}

@media only screen and (max-width: 768px) {
  .subscriptions-view {
    width: 100%;
    height: 100%;
    padding: 2em;
    margin: 1em 0em;
    display: flex;
    flex-direction: column;
    justify-content: center;
  }
}

